--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,11 +118,11 @@ body {
 .hero-video-section {
   position: relative;
   overflow: hidden;
-  min-height: calc(100vh - 7.125rem);
+  min-height: calc(100dvh - 7.125rem);
 }
 
 .hero-section-container {
-  min-height: calc(100vh - 7.125rem);
+  min-height: calc(100dvh - 7.125rem);
 }
 
 .hero-bg-video {
@@ -648,7 +648,7 @@ p {
   grid-template-rows: repeat(12, 1fr);
   gap: 0.75rem;
   margin-top: 1.5rem;
-  height: 100vh;
+  height: 100dvh;
 }
 
 /* Explicit masonry placement per provided spec */
@@ -3118,9 +3118,9 @@ p {
   border: none;
   border-radius: 0;
   overflow: hidden;
-  height: 90vh;
-  width: 100vw;
-  margin: 10vh 0 0 0;
+  height: 90dvh;
+  width: 100dvw;
+  margin: 10dvh 0 0 0;
   border-radius: 0.75rem 0.75rem 0 0;
   max-width: none;
   position: fixed;
@@ -3145,7 +3145,7 @@ p {
   align-items: center;
   justify-content: center;
   padding: 1.5rem 0;
-  height: calc(100vh - 10vh - 88px);
+  height: calc(100dvh - 10dvh - 88px);
 }
 
 .enquire-img {
@@ -3169,7 +3169,7 @@ p {
   padding-right: 0;
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 10vh);
+  height: calc(100dvh - 10dvh);
 }
 
 .enquire-modal-content-container {
@@ -3496,16 +3496,7 @@ p {
     padding-bottom: 0;
   }
 
-  .modal-fullscreen .modal-content {
-    margin: 20vh 0 0 0;
-  }
-
-  .enquire-modal-container::before {
-    height: 20vh;
-  }
-
   .enquire-close-btn {
-    top: 3rem;
     right: 1rem;
   }
   
